## v1.0.2: Resolved editor pane issue where it doesn't have a backing file.
- Added env publish token elvis check for JB_PLUGIN_TOKEN as well as PUBLISH_TOKEN

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -1,8 +1,8 @@
 <idea-plugin>
     <id>org.threeform.idea.plugins.zen_editor</id>
     <name>Zen Editor</name>
-    <version>1.0.1</version>
-    <vendor email="jonathan.glanz@gmail.com" url="https://github.com/jglanz">profile</vendor>
+    <version>1.0.2</version>
+    <vendor email="jonathan.glanz@gmail.com" url="https://github.com/jglanz">Jonathan Glanz</vendor>
 
     <description><![CDATA[
       <b>Reach true ZEN in your editor</b><br>
